--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket Patrol</title>
     <style>html {
-        background-color: bisque;
+        background-color: mistyrose;
     }</style>
 </head>
 <body>
